name:                atom-xml-conduit-example
version:             0.1.0
build-type:          Simple
cabal-version:       >=1.10

executable main
  main-is:             Main.hs
  build-depends:       base
                     , text
                     , time
                     , xml
                     , atom-basic >= 0.2.0
  default-language: Haskell2010
